[package]
name = "superdupervoxels"
version = "0.0.8"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["embedded_watcher", "file_watcher"] }
bevy_egui = "0.39.1"
postcard = { version = "1.1.3", features = ["use-std"] }
redb = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[features]
dev = ["bevy/dynamic_linking"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
strip = true
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "fat"
opt-level = "z"